--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <h3>Enter your guess here!</h3>
         </div>
         <div class="input-box">
-            <input type="text" id="guess" name="guess" maxlength="1"><br><br>
+            <input type="text" id="guess" onfocus="this.value=''" name="guess" maxlength="1"><br><br>
             <button id="guess-button" onclick="checkForWin()">Go!</button>
         </section><br>
         </div>
         <div class="game-box">
-            <img src="" alt="spaceship">
+            <img id="space-man" src="" alt="spaceship">
         </div>
     </main>
     <script src="myscripts.js"></script>
