added img and css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Text&family=Goldman:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Space-Man!</title>
 </head>
@@ -11,6 +14,7 @@
         <h1>
             SPACEMAN
         </h1>
+        <hr class="spaceman-line">
     </header>
     <h2>
         Welcome to our game! To play, just click on the letters below to make a guess. If you complete the word within
@@ -21,9 +25,10 @@
         <section class="word-blank" id="word-blank"></section><br><br>
         <div class="enter-box">
             <h3>Enter your guess here!</h3>
+            <hr class="line">
         </div>
         <div class="input-box">
-            <input type="text" id="guess" onfocus="this.value=''" name="guess" maxlength="1"><br><br>
+            <input placeholder="only enter a single letter." type="text" id="guess" onfocus="this.value=''" name="guess" maxlength="1"><br><br>
             <button id="guess-button" onclick="checkForWin()">GO!</button>
         </div>
         <div class="game-box">
